src/add-ons/kernel/busses/usb/ehci.cpp
@@ -888,9 +888,15 @@ EHCI::CancelQueuedTransfers(Pipe *pipe, bool force)
 	if (!Lock())
 		return B_ERROR;
 
+	struct transfer_entry {
+		Transfer *			transfer;
+		transfer_entry *	next;
+	};
+
+	transfer_entry *list = NULL;
 	transfer_data *current = fFirstTransfer;
 	while (current) {
-		if (current->transfer->TransferPipe() == pipe) {
+		if (current->transfer && current->transfer->TransferPipe() == pipe) {
 			// clear the active bit so the descriptors are canceled
 			ehci_qtd *descriptor = (ehci_qtd *)current->queue_head->element_log;
 			while (descriptor) {
@@ -902,7 +908,14 @@ EHCI::CancelQueuedTransfers(Pipe *pipe, bool force)
 				// if the transfer is canceled by force, the one causing the
 				// cancel is probably not the one who initiated the transfer
 				// and the callback is likely not safe anymore
-				current->transfer->Finished(B_CANCELED, 0);
+				transfer_entry *entry
+					= (transfer_entry *)malloc(sizeof(transfer_entry));
+				if (entry != NULL) {
+					entry->transfer = current->transfer;
+					current->transfer = NULL;
+					entry->next = list;
+					list = entry;
+				}
 			}
 
 			current->canceled = true;
@@ -912,6 +925,14 @@ EHCI::CancelQueuedTransfers(Pipe *pipe, bool force)
 	}
 
 	Unlock();
+
+	while (list != NULL) {
+		transfer_entry *next = list->next;
+		list->transfer->Finished(B_CANCELED, 0);
+		delete list->transfer;
+		free(list);
+		list = next;
+	}
 
 	// notify the finisher so it can clean up the canceled transfers
 	release_sem_etc(fFinishTransfersSem, 1, B_DO_NOT_RESCHEDULE);
